fixed some broken css due to the merge

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,4 @@
   padding: 0;
 }
 
-/* *{
-  border: 1px solid white;
-} */
+
