--- a/frontend/src/Components/About/About.css
+++ b/frontend/src/Components/About/About.css
@@ -7,7 +7,6 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: "Work Sans", sans-serif;
   background-color: #101010;
 }
 
@@ -45,31 +44,28 @@ body {
   /* max-width: 80%; */
   /* width: 100%;  */
 }
-.text h2 {
-  font-family: Roboto;
-  font-size: 60px;
-  font-weight: 700;
-  line-height: 80px;
-  letter-spacing: 0em;
+.text h1 {
   text-align: center;
   color: #e35969;
 }
-
+.text{
+  margin-top: 10vh;
+}
 .line {
-  border: 4px solid #e35969;
+  height: 4px;
+  background-color: #e35969;
   border-radius: 3px;
   align-items: center;
   margin: auto;
-  width: 24%;
+  width: 10vh;
+  margin-top: 1vh;
 }
 
 .text p {
   font-size: 20px;
-  color: #444;
-  font-weight: 600;
-  line-height: 1.6;
   color: #e35969;
-  margin-top: 3%;
+  margin-top: 4vh;
+  line-height: 30px;
 }
 
 @media (max-width: 991px) {
@@ -78,7 +74,7 @@ body {
     flex-direction: column;
   }
   .text {
-    margin-top: 17%;
+    margin-top: 20vh;
     text-align: center;
     width: 60vw;
   }
