--- a/frontend/src/Components/AdminView/AdminView.css
+++ b/frontend/src/Components/AdminView/AdminView.css
@@ -101,7 +101,6 @@ width: 40px;
 
 }
 .slide-button-info{
-font-family: arial;
 font-size: 0px;
 width: 0;
 color: #fff;
